# Quiz-Application

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md
.github/workflows/: backend.yml  e2e.yml  frontend.yml
backend/: .env.example  config.py  db.py  gemini_client.py  main.py  models.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  db.py  gemini_client.py  main.py  models.py
backend/app/routes/: __init__.py  attempts.py  auth.py  generate.py  history.py  profile.py  quiz.py
backend/app/utils/: auth.py
backend/routes/: attempts.py  auth.py  generate.py  history.py  profile.py  quiz.py
backend/tests/: conftest.py  factories.py
backend/tests/integration/: test_attempts.py  test_auth.py  test_health.py  test_leaderboard.py  test_profile.py  test_quiz.py  test_security.py
backend/tests/unit/: test_auth_utils.py  test_db_proxy.py  test_models.py
backend/utils/: auth.py
docs/: API_REFERENCE.md  BACKEND_ARCHITECTURE.md  FRONTEND_ARCHITECTURE.md
frontend/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js  vitest.config.js
frontend/e2e/: auth.spec.js  global-setup.js  global-teardown.js  history.spec.js  my-quizzes.spec.js  profile.spec.js  quiz-attempt.spec.js  quiz-browse.spec.js  quiz-crud.spec.js  settings.spec.js  shared-user.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/__tests__/: helpers.jsx  setup.js
frontend/src/__tests__/components/: ConfirmDialog.test.jsx  Pagination.test.jsx  ProtectedRoute.test.jsx  QuizCard.test.jsx  QuizTimer.test.jsx  Sidebar.test.jsx  Toast.test.jsx  shared.test.jsx
frontend/src/__tests__/pages/: History.test.jsx  Home.test.jsx  MyQuizzes.test.jsx  Profile.test.jsx  QuizDetail.test.jsx  QuizForm.test.jsx  QuizLeaderboard.test.jsx  QuizQuestion.test.jsx  Settings.test.jsx  analytics.test.jsx  auth.test.jsx
frontend/src/__tests__/store/: attemptSlice.test.js  authSlice.test.js  quizSlice.test.js  uiSlice.test.js
frontend/src/__tests__/unit/: sanitize.test.js
frontend/src/components/: AppLayout.jsx  ConfirmDialog.css  ConfirmDialog.jsx  EmptyState.css  EmptyState.jsx  ErrorBoundary.jsx  LoadingSpinner.css  LoadingSpinner.jsx  Pagination.css  Pagination.jsx  ProtectedRoute.jsx  QuizCard.css  QuizCard.jsx  QuizTimer.css  QuizTimer.jsx  ShareButton.css  ShareButton.jsx  Sidebar.css  Sidebar.jsx  Toast.css  Toast.jsx
frontend/src/contexts/: AuthContext.jsx  QuizContext.jsx
frontend/src/lib/: api.js  sanitize.js
frontend/src/pages/: About.css  About.jsx  AttemptDetail.css  AttemptDetail.jsx  CreateQuiz.css  CreateQuiz.jsx  EditQuiz.css  EditQuiz.jsx  GlobalLeaderboard.css  GlobalLeaderboard.jsx  History.css  History.jsx  Home.css  Home.jsx  Login.css  Login.jsx  MyQuizzes.css  MyQuizzes.jsx  NotFound.jsx  Profile.css  Profile.jsx  QuizDetail.css  QuizDetail.jsx  QuizLeaderboard.css  QuizLeaderboard.jsx  QuizQuestion.css  QuizQuestion.jsx  QuizRankings.css  QuizRankings.jsx  Register.jsx  Settings.css  Settings.jsx  StatsPage.css  StatsPage.jsx
frontend/src/store/: hooks.js  index.js
frontend/src/store/api/: apiSlice.js
frontend/src/store/slices/: attemptSlice.js  authSlice.js  historySlice.js  quizSlice.js  uiSlice.js
